--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <title>随机强密码生成</title>
+  <title>随机强密码生成小工具</title>
   <style>
     @media (prefers-color-scheme: light) {
       body {
@@ -265,7 +265,7 @@
   <div class="message" id="msg" hidden>
     复制成功
   </div>
-  <div class="header-title">生成随机强密码</div>
+  <div class="header-title">随机强密码生成小工具</div>
   <div class="view-box div-view" id="result-area">
   </div>
   <div style="width: 100%;text-align: center; margin-top: 30px;">
@@ -281,6 +281,8 @@
       <br/>
     </div>
   </div>
+  <br/>
+  <center>Modified by why</center>
 
   <script>
     let letter = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789';
