--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <title>随机强密码生成小工具</title>
+  </br>
+  <center>本工具安全离线，不会上传数据到服务器</center>
   <style>
     @media (prefers-color-scheme: light) {
       body {
@@ -265,7 +267,7 @@
   <div class="message" id="msg" hidden>
     复制成功
   </div>
-  <div class="header-title">随机强密码生成小工具</div>
+  <div class="header-title">点击生成，复制使用</div>
   <div class="view-box div-view" id="result-area">
   </div>
   <div style="width: 100%;text-align: center; margin-top: 30px;">
