--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <title>随机强密码生成小工具</title>
   </br>
-  <center>本工具安全离线，不会上传数据到服务器</center>
+  <center>本工具数据仅在本地存储</center>
   <style>
     @media (prefers-color-scheme: light) {
       body {
